--- a/sbaishop-template.html
+++ b/sbaishop-template.html
@@ -181,7 +181,7 @@
                         <div
                             class="card bg-white rounded-lg shadow-lg overflow-hidden text-center p-4 hover:shadow-xl transition-shadow">
                             <a href="Skincare.html">
-                                <img src="Images/hair-cream.jpg" alt="Skincare"
+                                <img src="images/hair-cream.jpg" alt="Skincare"
                                     class="w-full h-32 object-cover rounded-lg mb-2">
                                 <h3 class="text-lg font-bold text-gray-800">العناية
                                     بالبشرة</h3>
@@ -194,7 +194,7 @@
                         <div
                             class="card bg-white rounded-lg shadow-lg overflow-hidden text-center p-4 hover:shadow-xl transition-shadow">
                             <a href="Makeup.html">
-                                <img src="Images/makeup-brush.jpg" alt="Makeup"
+                                <img src="images/makeup-brush.jpg" alt="Makeup"
                                     class="w-full h-32 object-cover rounded-lg mb-2">
                                 <h3 class="text-lg font-bold text-gray-800">مستحضرات
                                     التجميل</h3>
@@ -207,7 +207,7 @@
                         <div
                             class="card bg-white rounded-lg shadow-lg overflow-hidden text-center p-4 hover:shadow-xl transition-shadow">
                             <a href="Fragrances.html">
-                                <img src="Images/perfume.jpg" alt="Fragrances"
+                                <img src="images/perfume.jpg" alt="Fragrances"
                                     class="w-full h-32 object-cover rounded-lg mb-2">
                                 <h3 class="text-lg font-bold text-gray-800">العطور</h3>
                             </a>
@@ -219,7 +219,7 @@
                         <div
                             class="card bg-white rounded-lg shadow-lg overflow-hidden text-center p-4 hover:shadow-xl transition-shadow">
                             <a href="Haircare.html">
-                                <img src="Images/product1.jpg" alt="Haircare"
+                                <img src="images/product1.jpg" alt="Haircare"
                                     class="w-full h-32 object-cover rounded-lg mb-2">
                                 <h3 class="text-lg font-bold text-gray-800">العناية
                                     بالشعر</h3>
@@ -232,7 +232,7 @@
                         <div
                             class="card bg-white rounded-lg shadow-lg overflow-hidden text-center p-4 hover:shadow-xl transition-shadow">
                             <a href="Bodycare.html">
-                                <img src="Images/NAAYLA TEA.jpg" alt="Bodycare"
+                                <img src="images/NAAYLA TEA.jpg" alt="Bodycare"
                                     class="w-full h-32 object-cover rounded-lg mb-2">
                                 <h3 class="text-lg font-bold text-gray-800">الشاي الصحراوي</h3>
                             </a>
@@ -244,7 +244,7 @@
                         <div
                             class="card bg-white rounded-lg shadow-lg overflow-hidden text-center p-4 hover:shadow-xl transition-shadow">
                             <a href="quick.html">
-                                <img src="Images/product2.jpg" alt="Skincare"
+                                <img src="images/product2.jpg" alt="Skincare"
                                     class="w-full h-32 object-cover rounded-lg mb-2">
                                 <h3 class="text-lg font-bold text-gray-800">العناية
                                     بالبشرة</h3>
@@ -266,7 +266,7 @@
                     <div class="swiper-slide">
                         <div class="bg-white rounded-lg shadow-lg overflow-hidden hover-scale relative">
                             <div class="sale-badge">خصم 20%</div>
-                            <img src="Images/hair-cream.jpg" alt="Sale Product 1" class="w-full h-48 object-cover">
+                            <img src="images/hair-cream.jpg" alt="Sale Product 1" class="w-full h-48 object-cover">
                             <div class="p-4">
                                 <h3 class="text-xl font-bold text-gray-800">كريم
                                     الشعر</h3>
@@ -289,7 +289,7 @@
                     <div class="swiper-slide">
                         <div class="bg-white rounded-lg shadow-lg overflow-hidden hover-scale relative">
                             <div class="sale-badge">خصم 15%</div>
-                            <img src="Images/makeup-brush.jpg" alt="Sale Product 2" class="w-full h-48 object-cover">
+                            <img src="images/makeup-brush.jpg" alt="Sale Product 2" class="w-full h-48 object-cover">
                             <div class="p-4">
                                 <h3 class="text-xl font-bold text-gray-800">فرشاة
                                     المكياج</h3>
@@ -312,7 +312,7 @@
                     <div class="swiper-slide">
                         <div class="bg-white rounded-lg shadow-lg overflow-hidden hover-scale relative">
                             <div class="sale-badge">خصم 25%</div>
-                            <img src="Images/Tassaout tea.jpg" alt="Sale Product 3" class="w-full h-48 object-cover">
+                            <img src="images/Tassaout tea.jpg" alt="Sale Product 3" class="w-full h-48 object-cover">
                             <div class="p-4">
                                 <h3 class="text-xl font-bold text-gray-800">شاي التساوت</h3>
                                 <p class="text-gray-600 mt-2">عطر برائحة
@@ -334,7 +334,7 @@
                     <div class="swiper-slide">
                         <div class="bg-white rounded-lg shadow-lg overflow-hidden hover-scale relative">
                             <div class="sale-badge">خصم 30%</div>
-                            <img src="Images/product1.jpg" alt="Sale Product 4" class="w-full h-48 object-cover">
+                            <img src="images/product1.jpg" alt="Sale Product 4" class="w-full h-48 object-cover">
                             <div class="p-4">
                                 <h3 class="text-xl font-bold text-gray-800">مصل
                                     الشعر</h3>
@@ -357,7 +357,7 @@
                     <div class="swiper-slide">
                         <div class="bg-white rounded-lg shadow-lg overflow-hidden hover-scale relative">
                             <div class="sale-badge">خصم 30%</div>
-                            <img src="Images/Alma9ssod Tea.jpg" alt="Sale Product 4" class="w-full h-48 object-cover">
+                            <img src="images/Alma9ssod Tea.jpg" alt="Sale Product 4" class="w-full h-48 object-cover">
                             <div class="p-4">
                                 <h3 class="text-xl font-bold text-gray-800">شاي المقصود</h3>
                                 <p class="text-gray-600 mt-2">واقي للحماية من اشعة الشمس.</p>
@@ -386,7 +386,7 @@
                 <!-- Recommended Product 1 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden hover-scale relative">
                     <div class="recommended-badge">موصى به</div>
-                    <img src="Images/AlHawz tea.jpg" alt="Recommended Product 1" class="w-full h-48 object-cover">
+                    <img src="images/AlHawz tea.jpg" alt="Recommended Product 1" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800">شاي الحوز</h3>
                         <p class="text-gray-600 mt-2">شاي الحوز من اجود انواع الشاي</p>
@@ -405,7 +405,7 @@
                 <!-- Recommended Product 2 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden hover-scale relative">
                     <div class="recommended-badge">موصى به</div>
-                    <img src="Images/product3.jpg" alt="Recommended Product 2" class="w-full h-48 object-cover">
+                    <img src="images/product3.jpg" alt="Recommended Product 2" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800">بلسم
                             الشعر</h3>
@@ -425,7 +425,7 @@
                 <!-- Recommended Product 3 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden hover-scale relative">
                     <div class="recommended-badge">موصى به</div>
-                    <img src="Images/product4.jpg" alt="Recommended Product 3" class="w-full h-48 object-cover">
+                    <img src="images/product4.jpg" alt="Recommended Product 3" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800">مكياج
                             عيون</h3>
@@ -446,7 +446,7 @@
                 <!-- Recommended Product 4 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden hover-scale relative">
                     <div class="recommended-badge">موصى به</div>
-                    <img src="Images/NAAYLA TEA.jpg" alt="Recommended Product 4" class="w-full h-48 object-cover">
+                    <img src="images/NAAYLA TEA.jpg" alt="Recommended Product 4" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800">شاي النعيلة</h3>
                         <p class="text-gray-600 mt-2">غسول لترطيب الجسم.</p>
@@ -471,7 +471,7 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
                 <!-- Product 1 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="Images/product1.jpg" alt="Product 1" class="w-full h-48 object-cover">
+                    <img src="images/product1.jpg" alt="Product 1" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800">كريم
                             الشعر</h3>
@@ -491,7 +491,7 @@
 
                 <!-- Product 2 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="Images/Tassaout tea.jpg" alt="Product 2" class="w-full h-48 object-cover">
+                    <img src="images/Tassaout tea.jpg" alt="Product 2" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800">شاي التساوت</h3>
                         <p class="text-gray-600 mt-2">فرشاة عالية الجودة
@@ -510,7 +510,7 @@
 
                 <!-- Product 3 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="Images/product3.jpg" alt="Product 3" class="w-full h-48 object-cover">
+                    <img src="images/product3.jpg" alt="Product 3" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800">عطر
                             فاخر</h3>
@@ -530,7 +530,7 @@
 
                 <!-- Product 4 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="Images/hair-cream.jpg" alt="Product 4" class="w-full h-48 object-cover">
+                    <img src="images/hair-cream.jpg" alt="Product 4" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800">مصل
                             الشعر</h3>
