--- a/checkout.html
+++ b/checkout.html
@@ -96,7 +96,7 @@
 
                 <!-- Cart Icon -->
                 <div class="flex items-center space-x-4 space-x-reverse">
-                    <a href="Cart.html" class="text-green-500 transition-colors relative">
+                    <a href="cart.html" class="text-green-500 transition-colors relative">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -131,7 +131,7 @@
                 <h1 class="text-3xl font-display font-bold mb-2">إتمام الطلب</h1>
                 <div class="text-sm text-gray-600">
                     <a href="index.html" class="hover:text-primary">الرئيسية</a> /
-                    <a href="Cart.html" class="hover:text-primary">سلة التسوق</a> /
+                    <a href="cart.html" class="hover:text-primary">سلة التسوق</a> /
                     <span class="text-primary">إتمام الطلب</span>
                 </div>
             </div>
@@ -230,7 +230,7 @@
 
                         <!-- return to cart  -->
                         <p class="text-center mt-2">
-                            <a href="Cart.html" class="text-primary hover:underline flex justify-center items-center">←
+                            <a href="cart.html" class="text-primary hover:underline flex justify-center items-center">←
                                 <span class="ml-1">العودة إلى السلة</span></a>
                         </p>
                         <!-- Security Info -->
