--- a/admin/index.html
+++ b/admin/index.html
@@ -103,7 +103,7 @@
                         window.location.href = "clients.php";
                         break;
                     default:
-                        window.location.href = "index.php";
+                        window.location.href = "index.html";
                         break;
                 }
             }
@@ -186,7 +186,7 @@
                             window.location.href = "clients.php";
                             break;
                         default:
-                            window.location.href = "index.php";
+                            window.location.href = "index.html";
                             break;
                     }
                 })
