fix: enhance permission-based redirection logic and add smooth scrolling to HTML

--- a/admin/index.html
+++ b/admin/index.html
@@ -82,32 +82,34 @@
 
     <!-- JavaScript for Show Password -->
     <script>
+        const urlParams = new URLSearchParams(window.location.search);
+        const header = urlParams.get('header') ?? null;
 
         document.addEventListener("DOMContentLoaded", () => {
-            const token = localStorage.getItem('token') ?? sessionStorage.getItem('token');
-            const userId = localStorage.getItem('userId') ?? sessionStorage.getItem('userId');
-            const permissions = (localStorage.getItem('permissions') ?? sessionStorage.getItem('permissions') ?? '').split('&');
-            console.log(permissions)
-            if (token && userId && permissions) {
-                switch (permissions[0]) {
-                    case 'vueDashboard':
-                        window.location.href = "dashboard.php";
-                        break;
-                    case 'gererProducts':
-                        window.location.href = "products.php";
-                        break;
-                    case 'gererOrders':
-                        window.location.href = "orders.php";
-                        break;
-                    case 'gererUsers':
-                        window.location.href = "clients.php";
-                        break;
-                    default:
-                        window.location.href = "index.html";
-                        break;
-                }
+            const token = localStorage.getItem('token') || sessionStorage.getItem('token');
+            const userId = localStorage.getItem('userId') || sessionStorage.getItem('userId');
+            const permissions = (localStorage.getItem('permissions') || sessionStorage.getItem('permissions') || '').split('&');
+
+            const redirectToPage = (permission) => {
+                const routes = {
+                    vueDashboard: "dashboard.php",
+                    gererProducts: "products.php",
+                    gererOrders: "orders.php",
+                    gererUsers: "users.php",
+                    gererClients: "clients.php"
+                };
+                window.location.href = routes[permission] || "index.html";
+            };
+
+            if (header && permissions.includes(header)) {
+                redirectToPage(header);
+                return;
             }
-        })
+
+            if (token && userId && permissions.length > 0) {
+                redirectToPage(permissions[0]);
+            }
+        });
 
         function Login() {
             const email = document.getElementById('email');
@@ -172,6 +174,10 @@
 
                     const permissions = data.permissions.split('&');
 
+                    if (header !== null) {
+                        permissions[0] = header
+                    }
+
                     switch (permissions[0]) {
                         case 'vueDashboard':
                             window.location.href = "dashboard.php";
@@ -183,7 +189,16 @@
                             window.location.href = "orders.php";
                             break;
                         case 'gererUsers':
-                            window.location.href = "clients.php";
+                            window.location.href = "users.php";
+                            break;
+                        case 'gererCategorys':
+                            window.location.href = "categories.php"
+                            break;
+                        case 'gererSettings':
+                            window.location.href = "parametrs.php"
+                            break;
+                        case 'gererClients':
+                            window.location.href = "clients.php"
                             break;
                         default:
                             window.location.href = "index.html";
