--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         }
     </script>
     <style type="text/css">
+        html {
+            scroll-behavior: smooth;
+        }
+
         body {
             font-family: 'Noto Kufi Arabic', sans-serif;
             background-color: #FFFFFF;
