--- a/cart.html
+++ b/cart.html
@@ -141,7 +141,7 @@
                         </li>
                         <li><a href="products.html"
                                 class="font-medium hover:text-primary transition-colors">منتجاتنا</a></li>
-                        <li><a href="index.html#Categories"
+                        <li><a href="index.htmlcategories.html"
                                 class="font-medium hover:text-primary transition-colors">فئات المنتجات</a></li>
                     </ul>
 
@@ -200,7 +200,7 @@
                             class="font-medium hover:text-primary transition-colors block py-2">الرئيسية</a></li>
                     <li><a href="products.html"
                             class="font-medium hover:text-primary transition-colors block py-2">منتجاتنا</a></li>
-                    <li><a href="index.html#Categories"
+                    <li><a href="index.htmlcategories.html"
                             class="font-medium hover:text-primary transition-colors block py-2">فئات المنتجات</a></li>
                 </ul>
             </div>
@@ -326,7 +326,7 @@
                         </li>
                         <li><a href="products.html"
                                 class="text-gray-400 hover:text-primary transition-colors">منتجاتنا</a></li>
-                        <li><a href="index.html#Categories"
+                        <li><a href="index.htmlcategories.html"
                                 class="text-gray-400 hover:text-primary transition-colors">فئات المنتجات</a></li>
                     </ul>
                 </div>
