--- a/checkout.html
+++ b/checkout.html
@@ -89,7 +89,7 @@
                         </li>
                         <li><a href="products.html"
                                 class="font-medium hover:text-primary transition-colors">منتجاتنا</a></li>
-                        <li><a href="#Categories" class="font-medium hover:text-primary transition-colors">فئات
+                        <li><a href="categories.html" class="font-medium hover:text-primary transition-colors">فئات
                                 المنتجات</a></li>
                     </ul>
                 </nav>
@@ -117,7 +117,7 @@
                             class="font-medium hover:text-primary transition-colors block py-2">الرئيسية</a></li>
                     <li><a href="products.html"
                             class="font-medium hover:text-primary transition-colors block py-2">منتجاتنا</a></li>
-                    <li><a href="#Categories" class="font-medium hover:text-primary transition-colors block py-2">فئات
+                    <li><a href="categories.html" class="font-medium hover:text-primary transition-colors block py-2">فئات
                             المنتجات</a></li>
                 </ul>
             </div>
@@ -285,7 +285,7 @@
                         </li>
                         <li><a href="products.html"
                                 class="text-gray-400 hover:text-primary transition-colors">منتجاتنا</a></li>
-                        <li><a href="#Categories" class="text-gray-400 hover:text-primary transition-colors">فئات
+                        <li><a href="categories.html" class="text-gray-400 hover:text-primary transition-colors">فئات
                                 المنتجات</a></li>
                     </ul>
                 </div>
