--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                 transform: translateY(0);
             }
         }
+        .left-to-right {
+            direction: ltr;
+        }
 
         .category-item {
             transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -207,7 +210,7 @@
                         </li>
                         <li><a href="products.html"
                                 class="font-medium hover:text-primary transition-colors">منتجاتنا</a></li>
-                        <li><a href="#Categories" class="font-medium hover:text-primary transition-colors">فئات
+                        <li><a href="categories.html" class="font-medium hover:text-primary transition-colors">فئات
                                 المنتجات</a></li>
                     </ul>
 
@@ -266,7 +269,7 @@
                             class="font-medium hover:text-primary transition-colors block py-2">الرئيسية</a></li>
                     <li><a href="products.html"
                             class="font-medium text-primary transition-colors block py-2">منتجاتنا</a></li>
-                    <li><a href="#Categories" class="font-medium hover:text-primary transition-colors block py-2">فئات
+                    <li><a href="categories.html" class="font-medium hover:text-primary transition-colors block py-2">فئات
                             المنتجات</a></li>
                 </ul>
             </div>
@@ -282,7 +285,7 @@
                     السباعي</h1>
                 <p class="text-lg mb-8 fadeIn" style="animation-delay: 0.2s">اكتشف مجموعة واسعة من
                     انواع الشاي الصحراوي الأصيل.</p>
-                <a href="#products"
+                <a href="products"
                     class="inline-block bg-primary text-white px-8 py-3 rounded-md font-medium hover:bg-secondary transition-colors fadeIn"
                     style="animation-delay: 0.4s">تسوق الآن</a>
             </div>
@@ -564,7 +567,7 @@
                         </li>
                         <li><a href="products.html"
                                 class="text-gray-400 hover:text-primary transition-colors">منتجاتنا</a></li>
-                        <li><a href="#Categories" class="text-gray-400 hover:text-primary transition-colors">فئات
+                        <li><a href="categories.html" class="text-gray-400 hover:text-primary transition-colors">فئات
                                 المنتجات</a></li>
                     </ul>
                 </div>
@@ -583,16 +586,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
                             </svg>
-                            <span class="text-gray-400">شارع قيراوان، العيون</span>
-                        </li>
-                        <li class="flex items-start">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-primary mt-1 ml-2" fill="none"
-                                viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
-                                </path>
-                            </svg>
-                            <span class="text-gray-400">info@sbaishop.com</span>
+                            <span class="text-gray-400">رقم 02 شارع عبد الرحمن ناصر قرب شارع القيروان، العيون</span>
                         </li>
                         <li class="flex items-start">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-primary mt-1 ml-2" fill="none"
@@ -601,18 +595,16 @@
                                     d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
                                 </path>
                             </svg>
-                            <span class="text-gray-400">+212 600 000 000</span>
+                            <span class="left-to-right text-gray-400">+212 618 433 802</span>
                         </li>
                         <li class="flex items-start">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-primary mt-1 ml-2" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
+                                </path>
                             </svg>
-                            <span class="text-gray-400">الإثنين -
-                                الجمعة: 9
-                                صباحاً - 6 مساءً<br>السبت: 10 صباحاً - 4
-                                مساءً</span>
+                            <span class="left-to-right text-gray-400">+212 661 561 186</span>
                         </li>
                     </ul>
                 </div>
