--- a/product.html
+++ b/product.html
@@ -144,7 +144,7 @@
                         </li>
                         <li><a href="products.html"
                                 class="font-medium hover:text-primary transition-colors">منتجاتنا</a></li>
-                        <li><a href="index.html#Categories"
+                        <li><a href="index.htmlcategories.html"
                                 class="font-medium hover:text-primary transition-colors">فئات المنتجات</a></li>
                     </ul>
                 </nav>
@@ -172,7 +172,7 @@
                             class="font-medium hover:text-primary transition-colors block py-2">الرئيسية</a></li>
                     <li><a href="products.html"
                             class="font-medium hover:text-primary transition-colors block py-2">منتجاتنا</a></li>
-                    <li><a href="index.html#Categories"
+                    <li><a href="index.htmlcategories.html"
                             class="font-medium hover:text-primary transition-colors block py-2">فئات المنتجات</a></li>
                 </ul>
             </div>
@@ -557,7 +557,7 @@
                         </li>
                         <li><a href="products.html"
                                 class="text-gray-400 hover:text-primary transition-colors">منتجاتنا</a></li>
-                        <li><a href="#Categories" class="text-gray-400 hover:text-primary transition-colors">فئات
+                        <li><a href="categories.html" class="text-gray-400 hover:text-primary transition-colors">فئات
                                 المنتجات</a></li>
                     </ul>
                 </div>
