--- a/products.html
+++ b/products.html
@@ -231,7 +231,7 @@
                         </li>
                         <li><a href="products.html"
                                 class="font-medium hover:text-primary transition-colors">منتجاتنا</a></li>
-                        <li><a href="#Categories" class="font-medium hover:text-primary transition-colors">فئات
+                        <li><a href="categories.html" class="font-medium hover:text-primary transition-colors">فئات
                                 المنتجات</a></li>
                     </ul>
 
@@ -290,7 +290,7 @@
                             class="font-medium hover:text-primary transition-colors block py-2">الرئيسية</a></li>
                     <li><a href="products.html"
                             class="font-medium hover:text-primary transition-colors block py-2">منتجاتنا</a></li>
-                    <li><a href="#Categories" class="font-medium hover:text-primary transition-colors block py-2">فئات
+                    <li><a href="categories.html" class="font-medium hover:text-primary transition-colors block py-2">فئات
                             المنتجات</a></li>
                 </ul>
             </div>
@@ -550,7 +550,7 @@
                         </li>
                         <li><a href="products.html"
                                 class="text-gray-400 hover:text-primary transition-colors">منتجاتنا</a></li>
-                        <li><a href="#Categories" class="text-gray-400 hover:text-primary transition-colors">فئات
+                        <li><a href="categories.html" class="text-gray-400 hover:text-primary transition-colors">فئات
                                 المنتجات</a></li>
                     </ul>
                 </div>
