--- a/category.html
+++ b/category.html
@@ -440,7 +440,7 @@
                 productElement.setAttribute('data-product-id', product.id); // Add this
                 productElement.innerHTML = `
                 <div class="relative">
-                    <img src="${product.image_url}" alt="${product.label}" class="w-full h-64 object-cover">                        
+                    <img src="${product.image_url}" alt="${product.label}" class="w-full h-64 object-cover" onclick="window.open('product.html?id=${product.id}','_self')">                    
                     ${new Date(product.created_at) >= new Date(new Date().setMonth(new Date().getMonth() - 2)) ?
                         '<div class="absolute top-2 left-2 bg-green-500 text-white text-xs px-2 py-1 rounded">جديد</div>' : ''}
                     ${product.discount_price && product.selling_price && product.discount_price < product.selling_price ?
