--- a/product.html
+++ b/product.html
@@ -515,6 +515,18 @@
             </div>
         </div>
     </section>
+    <section class="bg-light">
+        <div class="container mx-auto px-4">
+            <h2 class="text-2xl font-bold mb-6">منتجات مشابهة</h2>
+            <!-- <div class="flex space-x-4 overflow-x-auto"></div> -->
+            <div class="w-full flex space-x-4 w-[max-content] px-4 gap-2 overflow-x-auto p-4"
+                id="similar-products-container">
+
+            </div>
+            <!-- Add more product cards here -->
+        </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="bg-dark text-white pt-12 pb-6">
