--- a/product.html
+++ b/product.html
@@ -515,11 +515,11 @@
             </div>
         </div>
     </section>
-    <section class="bg-light">
+    <section class="bg-light" id="similar-products-section">
         <div class="container mx-auto px-4">
             <h2 class="text-2xl font-bold mb-6">منتجات مشابهة</h2>
             <!-- <div class="flex space-x-4 overflow-x-auto"></div> -->
-            <div class="w-full flex space-x-4 w-[max-content] px-4 gap-2 overflow-x-auto p-4"
+            <div class="w-full flex space-x-4 gap-2 overflow-x-auto px-4 py-4 snap-x snap-mandatory scroll-smooth"
                 id="similar-products-container">
 
             </div>
