fixing errors in the client-side code

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                         السباعي</h1>
                     <p class="text-lg mb-8 fadeIn"
                         style="animation-delay: 0.2s">اكتشف مجموعة واسعة من
-                        انواع الشاي الصحراوي الأصيل.</p>
+                        انواع الشاي الصحراوي الأصيل، الشوكولاتة و العطور الفاخرة.</p>
                     <a href="products"
                         class="inline-block bg-primary text-white px-8 py-3 rounded-md font-medium hover:bg-secondary transition-colors fadeIn"
                         style="animation-delay: 0.4s">تسوق الآن</a>
@@ -604,7 +604,7 @@
                                 class="text-2xl font-display font-bold text-primary mb-4">متجر
                                 السباعي</h3>
                             <p class="text-gray-400 mb-4">اكتشف مجموعة واسعة من
-                                انواع الشاي الصحراوي الأصيل.</p>
+                        انواع الشاي الصحراوي الأصيل، الشوكولاتة و العطور الفاخرة</p>
                             <div class="flex space-x-4 space-x-reverse">
                                 <a href="https://facebook.com"
                                     class="text-gray-400 hover:text-primary transition-colors">
