--- a/checkout.html
+++ b/checkout.html
@@ -255,7 +255,7 @@
                                 class="text-2xl font-display font-bold text-primary mb-4">متجر
                                 السباعي</h3>
                             <p class="text-gray-400 mb-4">اكتشف مجموعة واسعة من
-                                انواع الشاي الصحراوي الأصيل.</p>
+                        انواع الشاي الصحراوي الأصيل، الشوكولاتة و العطور الفاخرة</p>
                             <div class="flex space-x-4 space-x-reverse">
                                 <a href="https://facebook.com"
                                     class="text-gray-400 hover:text-primary transition-colors">
