--- a/products.html
+++ b/products.html
@@ -661,7 +661,8 @@
                                     </path>
                                 </svg>
                                 <span
-                                    class="left-to-right text-gray-400">+212
+                                    dir="ltr"
+                                    class="text-gray-400">+212
                                     618 433 802</span>
                             </li>
                         </ul>
