--- a/category.html
+++ b/category.html
@@ -328,7 +328,8 @@
                                     </path>
                                 </svg>
                                 <span
-                                    class="left-to-right text-gray-400">+212
+                                dir="ltr"
+                                    class="text-gray-400">+212
                                     618 433 802</span>
                             </li>
                         </ul>
