--- a/products.html
+++ b/products.html
@@ -527,7 +527,7 @@
                         <!-- Pagination -->
                         <div class="mt-8 flex justify-center">
                             <nav
-                                class="flex items-center space-x-2 space-x-reverse">
+                                class="pagination-container flex items-center space-x-2 space-x-reverse flex-wrap max-w-full justify-center">
                                 <button
                                     class="px-3 py-1 rounded border border-gray-300 text-gray-500 hover:bg-primary hover:text-white transition-colors">
                                     <svg xmlns="http://www.w3.org/2000/svg"
