--- a/category.html
+++ b/category.html
@@ -225,7 +225,7 @@
                 <!-- Update the pagination container -->
                 <div class="flex justify-center mt-12">
                     <nav
-                        class="flex items-center space-x-2 space-x-reverse pagination-container"></nav>
+                        class="pagination-container flex items-center space-x-2 space-x-reverse flex-wrap max-w-full justify-center"></nav>
                 </div>
             </div>
         </section>
